--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -1,4 +1,4 @@
-id: who.fhir.smart-ig-empty
+id: who.fhir.smart-measles-catopia
 canonical: http://worldhealthorganization.github.io/smart
 name: SMART
 title: SMART Empty IG
@@ -258,3 +258,4 @@ menu:
 #   setId: always # always | standalone-only
 dependencies:
   who.base: current
+  smart.who.int.immunizations-measles: current
