--- a/ig.ini
+++ b/ig.ini
@@ -1,5 +1,5 @@
 [IG]
-ig = fsh-generated/resources/ImplementationGuide-who.fhir.smart-ig-empty.json
+ig = fsh-generated/resources/ImplementationGuide-who.fhir.smart-measles-catopia.json
 
 #template = #local-template
 template = who.template.root#current
